--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -10,7 +10,7 @@ html {
 /* logo xaloc */
 img {
   position: absolute;
-  height: 93px;
+  height: 80%;
   top: 10px;
   left : 920px;
   border-radius: 3px;
@@ -22,7 +22,7 @@ img {
 /* barra in alto */
 #top {
   position: absolute;
-  width: 1920px;
+  width: 100%;
   height: 111px;
   left: 0px;
   top: 1px;
