--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -1,4 +1,22 @@
-html {
+/* import font */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCtr6Hw3aXpsog.woff2) format('woff2');
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCtr6Hw5aXo.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+body {
   background: url(./Assets/BG1.png) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -12,7 +30,7 @@ img {
   position: absolute;
   height: 80%;
   top: 10px;
-  left : 920px;
+  left : 46%;
   border-radius: 3px;
   text-align: center;
   display: block;
@@ -23,97 +41,74 @@ img {
 #top {
   position: absolute;
   width: 100%;
-  height: 111px;
+  height: 13%;
   left: 0px;
   top: 1px;
   opacity: 0.8;
   background: #0a0a0a;
 }
 
-/* barra in basso */
-#bottom {
-  position: absolute;
-  width: 1920px;
-  height: 80px;
-  left: 0px;
-  top: 1000px;
-  opacity: 0.5;
-  background: #0a0a0a;
-  
-}
 
 /* finestra centrale */
 #blackboard {
   position: absolute;
-  top:  190px;
-  left : 210px;
-  width: 1500px;
-  height: 700px;
+  top:  25%;
+  left : 10%;
+  width: 80%;
+  height: 60%;
   opacity: 0.8;
   border-radius: 25px;
   background: #0a0a0a;
-  font-family: 'Open Sans';
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 200;
-  font-size: 24px;
+  font-size: 20px;
   color: #C4C4C4;
   
 }
 
-#totETH{
-  position: absolute;
-  top:  100px;
-  left : 100px;
+ul{
+  list-style:none;
+  margin-left:8%;
 }
 
-#totETHCalcio{
-  position: absolute;
-  top:  100px;
-  left : 600px;
+.right{
+  float:right;
+  width: 33%;
+  height:70%;
+  margin-top:8%;
 }
 
-#totETHNBA{
-  position: absolute;
-  top:  100px;
-  left : 1100px;
+.left{
+  float:left;
+  height:70%;
+  width: 33%;
+  margin-top:8%;
 }
-
-#totCarte{
-  position: absolute;
-  top:  400px;
-  left : 100px;
-}
-
-
-#totCarteCalcio{
-  position: absolute;
-  top:  400px;
-  left : 600px;
-}
-
-#totCarteNBA{
-  position: absolute;
-  top:  400px;
-  left : 1100px;
-}
-
 
 
 h3 {
   /* Xaloc  */
+  left:2%;
   position: absolute;
-  width: 137px;
-  height: 29px;
-  left: 15px;
-  top: 995px;
-
-  font-family: 'Open Sans';
+  font-family: 'Montserrat';
   font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 50px;
+  text-align:center;
+  font-size: 18px;
 
   color: #C4C4C4;
+}
+
+/* barra in basso */
+#bottom {
+  position: absolute;
+  width: 100%;
+  height: 7%;
+  left: 0px;
+  top: 93%;
+  opacity: 0.5;
+  background: #0a0a0a;
+  
 }
 
 
