--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -76,14 +76,20 @@ ul{
   float:right;
   width: 33%;
   height:70%;
-  margin-top:8%;
+  margin-top:5%;
 }
 
 .left{
   float:left;
   height:70%;
   width: 33%;
-  margin-top:8%;
+  margin-top:5%;
+}
+
+
+/* Info delle queries */
+span{
+  text-align: center;
 }
 
 
